--- a/dev/css/header.css
+++ b/dev/css/header.css
@@ -118,6 +118,7 @@
 	border-bottom: 2px solid rgb(228, 228, 228);
 	background-color: #e4e4e4;
 	height: 50px;
+	transition: 1s;
 }
 .Menu {
 	list-style: none;
